--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -89,6 +89,10 @@ on boot
     chown system system /sys/bus/platform/devices/soc/soc:fpc1020/hw_reset
     chown system system /sys/bus/platform/devices/soc/soc:fpc1020/wakeup_enable
 
+    # Touchpanel
+    chmod 0664 /sys/devices/virtual/touch/touch_dev/double_tap
+    chown system system /sys/devices/virtual/touch/touch_dev/double_tap
+
 on property:sys.boot_completed=1
     # Enable ZRAM on boot_complete
     swapon_all /vendor/etc/fstab.qcom
