--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -28,6 +28,12 @@
 #
 
 on init
+    # Goodix fingerprint
+    chmod 0666 /dev/goodix_fp
+    chown system system /dev/goodix_fp
+    chmod 0664 /dev/fortsense_fp
+    chown system system /dev/fortsense_fp
+
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
@@ -70,6 +76,7 @@ on post-fs-data
     mkdir /data/vendor/thermal/config 0771 root system
 
     # Create fingerprint related directory
+    mkdir /data/vendor/fortsense 0770 system system
     mkdir /data/vendor/fpc 0770 system system
     mkdir /data/vendor/fpdump 0770 system system
     mkdir /data/vendor/goodix 0770 system system
